--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -5,6 +5,7 @@
     android:weightSum="1"
     android:background="#FFFFFF">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -16,6 +17,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent">
+
             <com.chocoroll.ourcompay.Model.EBTextView
                 android:id="@+id/title_bar_img"
                 android:layout_width="wrap_content"
@@ -30,6 +32,15 @@
 
     </LinearLayout>
 
+    <LinearLayout
+
+        android:paddingRight="20dp"
+        android:layout_marginTop="130dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
 <LinearLayout
 android:orientation="horizontal"
 android:layout_width="match_parent"
@@ -38,74 +49,100 @@ android:layout_height="wrap_content"
     android:layout_marginLeft="15dp"
     android:layout_marginTop="15dp">
 
-<com.chocoroll.ourcompay.Model.MTextView
+<com.chocoroll.ourcompay.Model.EBTextView
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:layout_weight="1"
-    android:text="E-mail"
+    android:text="E-mail : "
     android:textColor="@color/text"
     />
 
 
 <EditText
+    android:background="@null"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:id="@+id/editid"
-    android:layout_weight="2"
-    android:hint="E-mail"/>
+    android:layout_weight="2"/>
 </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="1dp"
+        android:layout_marginLeft="83dp"
+        android:layout_width="220dp"
+        android:layout_height="1dp"
+        android:background="#7894B0"/>
 <LinearLayout
+    android:layout_marginTop="15dp"
 android:orientation="horizontal"
     android:layout_marginRight="15dp"
     android:layout_marginLeft="15dp"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
 
-<com.chocoroll.ourcompay.Model.MTextView
+<com.chocoroll.ourcompay.Model.EBTextView
     android:layout_width="0dp"
     android:textColor="@color/text"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
-    android:text="비밀번호"
+    android:text="비밀 번호 : "
     android:layout_weight="1"
     />
 
 <EditText
+    android:background= "@null"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:id="@+id/editpwd"
     android:layout_weight="2"
-    android:hint="Password"
     android:password="true"/>
 
 </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="1dp"
+        android:layout_marginLeft="100dp"
+        android:layout_width="200dp"
+        android:layout_height="1dp"
+        android:background="#7894B0"/>
+
 <LinearLayout
+
+    android:layout_marginTop="15dp"
 android:orientation="horizontal"
     android:layout_marginRight="15dp"
     android:layout_marginLeft="15dp"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
 
-<com.chocoroll.ourcompay.Model.MTextView
+<com.chocoroll.ourcompay.Model.EBTextView
     android:layout_width="0dp"
     android:textColor="@color/text"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
-    android:text="비밀번호확인"
-    android:layout_weight="1"
+    android:text="비밀 번호 확인 : "
+    android:layout_weight="2"
     />
 
 <EditText
+    android:background="@null"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:id="@+id/editrepwd"
     android:layout_weight="2"
-    android:hint="Password"
     android:password="true"/>
 
 </LinearLayout>
 
+    <LinearLayout
+        android:layout_marginTop="1dp"
+        android:layout_marginLeft="140dp"
+        android:layout_width="160dp"
+        android:layout_height="1dp"
+        android:background="#7894B0"/>
+
+    </LinearLayout>
 
 
 <com.chocoroll.ourcompay.Model.EBTextView
