--- a/app/src/main/res/layout/fragment_company_detail.xml
+++ b/app/src/main/res/layout/fragment_company_detail.xml
@@ -5,7 +5,7 @@
     android:background="#ffffff"
     >
     <TableLayout
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -77,7 +77,7 @@
 
 
         <TableRow
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="15dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
@@ -109,8 +109,17 @@
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="소개 :"
+                android:text="소개 "
                 android:textColor="#6C6C6C"/>
+
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginBottom="10dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
 
             <com.chocoroll.ourcompay.Model.MTextView
                 android:layout_weight="3"
