--- a/app/src/main/res/layout/slide_menu_admin.xml
+++ b/app/src/main/res/layout/slide_menu_admin.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="안녕하세요 유저님~"
         android:id="@+id/menu_hi"
+        android:textColor="#FFFFFF"
         android:padding="10dp"
         android:layout_gravity="center_horizontal" />
 
@@ -30,7 +31,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:src="@drawable/left_menu" />
+            android:src="@drawable/edit" />
 
 
         <com.chocoroll.ourcompay.Model.BTextView
