--- a/app/src/main/res/layout/activity_report_write.xml
+++ b/app/src/main/res/layout/activity_report_write.xml
@@ -246,6 +246,7 @@
                         android:clickable="true"
                         android:paddingRight="8dp"
                         android:paddingLeft="8dp"
+                        android:gravity="center"
                         android:id="@+id/button_selectpic"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
