--- a/app/src/main/res/layout/fragment_report_list.xml
+++ b/app/src/main/res/layout/fragment_report_list.xml
@@ -1,9 +1,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.chocoroll.ourcompay.Home.ReportListFragment"
     android:background="#ffffff">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#CCC">
+    <com.chocoroll.ourcompay.Model.BTextView
+        android:id="@+id/content_date"
+        android:layout_marginLeft="15dp"
+        android:padding="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text = "[회사이름]"
+        android:textColor="#FFFFFF"
+        android:gravity="center"/>
 
+    <com.chocoroll.ourcompay.Model.BTextView
+        android:id="@+id/content_com"
+        android:padding="4dp"
+        android:layout_marginLeft="14dp"
+        android:layout_width="wrap_content"
+        android:textColor="#FFF"
+        android:layout_height="wrap_content"
+        android:text = "방문 목적"
+        android:gravity="center"/>
+
+    <com.chocoroll.ourcompay.Model.BTextView
+        android:id = "@+id/content_title"
+        android:textColor="#FFF"
+        android:layout_marginLeft="120dp"
+        android:padding="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:layout_marginRight="30dp"
+        android:text = "방문 날짜"/>
+    </LinearLayout>
 
     <ListView
         android:divider="@color/main_color"
