--- a/app/src/main/res/layout/model_report.xml
+++ b/app/src/main/res/layout/model_report.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="15dp">
 
 
-    <com.chocoroll.ourcompay.Model.BTextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:layout_marginLeft="5dp"
         android:textColor="@color/textBold"
         android:textSize="18dp"
