--- a/app/src/main/res/layout/fragment_report_list.xml
+++ b/app/src/main/res/layout/fragment_report_list.xml
@@ -6,9 +6,10 @@
     android:background="#ffffff">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:orientation="horizontal"
         android:background="#CCC">
+
     <com.chocoroll.ourcompay.Model.BTextView
         android:id="@+id/content_date"
         android:layout_marginLeft="15dp"
@@ -17,7 +18,7 @@
         android:layout_height="wrap_content"
         android:text = "[회사이름]"
         android:textColor="#FFFFFF"
-        android:gravity="center"/>
+        android:layout_gravity="center"/>
 
     <com.chocoroll.ourcompay.Model.BTextView
         android:id="@+id/content_com"
@@ -27,17 +28,17 @@
         android:textColor="#FFF"
         android:layout_height="wrap_content"
         android:text = "방문 목적"
-        android:gravity="center"/>
+        android:layout_gravity="center"/>
 
     <com.chocoroll.ourcompay.Model.BTextView
         android:id = "@+id/content_title"
         android:textColor="#FFF"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="110dp"
         android:padding="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_marginRight="30dp"
+        android:layout_gravity="center"
+        android:layout_marginRight="10dp"
         android:text = "방문 날짜"/>
     </LinearLayout>
 
@@ -47,4 +48,5 @@
         android:layout_height="wrap_content"
         android:id="@+id/listViewReport"
         android:layout_weight="1" />
+
 </LinearLayout>
