--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
+    android:background="#FFF"
     android:weightSum="1">
 
     <LinearLayout
@@ -30,20 +31,21 @@
 
     </LinearLayout>
     <LinearLayout
-        android:layout_margin="15dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.chocoroll.ourcompay.Model.MTextView
+        <com.chocoroll.ourcompay.Model.EBTextView
             android:layout_marginTop="70dp"
             android:paddingLeft="20dp"
-            android:layout_width="0dp"
+            android:layout_width="92dp"
             android:textColor="@color/text"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_weight="1"
-            android:text="E-mail"
+            android:text="E-mail : "
             />
 
 
@@ -53,8 +55,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/editid"
             android:layout_weight="2"
-            android:hint="E-mail"/>
+            android:background="@null"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="1dp"
+        android:layout_marginLeft="125dp"
+        android:layout_width="200dp"
+        android:layout_height="1dp"
+        android:background="#7894B0"/>
 
 
     <com.chocoroll.ourcompay.Model.EBTextView
