--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -20,7 +20,8 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -44,7 +45,7 @@
                     android:background="@null"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editpwd"
+                    android:id="@+id/pw"
                     android:layout_weight="2"/>
             </LinearLayout>
 
@@ -75,7 +76,7 @@
                     android:background= "@null"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editrepwd"
+                    android:id="@+id/newpw"
                     android:password="true"/>
 
             </LinearLayout>
@@ -85,7 +86,8 @@
                 android:layout_marginLeft="160dp"
                 android:layout_width="140dp"
                 android:layout_height="1dp"
-                android:background="#7894B0"/>
+                android:background="#7894B0"
+                android:id="@+id/" />
 
             <LinearLayout
 
@@ -109,7 +111,7 @@
                     android:background="@null"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editnewpw"
+                    android:id="@+id/newpw_confirm"
                     android:layout_weight="2"
                     android:password="true"/>
 
