--- a/app/src/main/res/layout/fragment_mylist.xml
+++ b/app/src/main/res/layout/fragment_mylist.xml
@@ -19,11 +19,11 @@
         android:layout_margin="10dp"
         android:text = "내 글 목록"
         android:textColor="@color/textBold"
-        android:textSize="20dp"/>
+        android:textSize="17dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="2dp"
         android:background="#7894B0"/>
 
     </LinearLayout>
@@ -45,21 +45,23 @@
 
 
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
         <com.chocoroll.ourcompay.Model.BTextView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text = "내 질문 목록"
             android:textColor="@color/textBold"
-            android:textSize="20dp"/>
+            android:textSize="17dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:background="#7894B0"/>
 
         </LinearLayout>
