--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -20,8 +20,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -86,8 +85,7 @@
                 android:layout_marginLeft="160dp"
                 android:layout_width="140dp"
                 android:layout_height="1dp"
-                android:background="#7894B0"
-                android:id="@+id/" />
+                android:background="#7894B0"/>
 
             <LinearLayout
 
